pod-security/restricted/restrict-volume-types/e2e/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../restrict-volume-types.yaml
assert:
- policy-assert.yaml
