pod-security/restricted/restrict-volume-types/e2e/bad-pod.yaml
###### Pods - Bad
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: container01
    image: busybox:1.35
    volumeMounts:
    - name: udev
      mountPath: /data
  volumes:
  - name: udev
    gcePersistentDisk:
      pdName: gke-pv
      fsType: ext4
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: container01
    image: busybox:1.35
    volumeMounts:
    - name: udev
      mountPath: /data
  volumes:
  - name: udev
    awsElasticBlockStore:
      volumeID: vol-f37a03aa
      fsType: ext4
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
  - name: container01
    image: busybox:1.35
    volumeMounts:
    - name: udev
      mountPath: /data
  volumes:
  - name: udev
    gitRepo:
      repository: https://github.com/kyverno/kyverno
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  containers:
  - name: container01
    image: busybox:1.35
    volumeMounts:
    - name: udev
      mountPath: /data
  volumes:
  - name: udev
    nfs:
      path: /data
      server: 10.105.68.50
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
spec:
  containers:
  - name: container01
    image: busybox:1.35
    volumeMounts:
    - name: udev
      mountPath: /data
  volumes:
  - name: udev
    iscsi:
      lun: 0
      iqn: iqn.1998-01.com.vmware:w1-hs3-n2503.eng.vmware.com:452738760:67
      targetPortal: 10.105.68.50:3260
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod06
spec:
  containers:
  - name: container01
    image: busybox:1.35
    volumeMounts:
    - name: udev
      mountPath: /data
  volumes:
  - name: udev
    glusterfs:
      endpoints: test
      path: /data
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod07
spec:
  containers:
  - name: container01
    image: busybox:1.35
    volumeMounts:
    - name: udev
      mountPath: /data
  volumes:
  - name: udev
    rbd:
      image: foo
      monitors:
      - foo
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod08
spec:
  containers:
  - name: container01
    image: busybox:1.35
    volumeMounts:
    - name: udev
      mountPath: /data
  volumes:
  - name: udev
    flexVolume:
      driver: foo
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod09
spec:
  containers:
  - name: container01
    image: busybox:1.35
    volumeMounts:
    - name: udev
      mountPath: /data
  volumes:
  - name: udev
    cinder:
      volumeID: my-vol
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod10
spec:
  containers:
  - name: container01
    image: busybox:1.35
    volumeMounts:
    - name: udev
      mountPath: /data
  volumes:
  - name: udev
    cephfs:
      monitors:
      - foo
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod11
spec:
  containers:
  - name: container01
    image: busybox:1.35
    volumeMounts:
    - name: udev
      mountPath: /data
  volumes:
  - name: udev
    flocker:
      datasetName: fooset
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod12
spec:
  containers:
  - name: container01
    image: busybox:1.35
    volumeMounts:
    - name: udev
      mountPath: /data
  volumes:
  - name: udev
    fc:
      wwids:
      - fooid.corp
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod13
spec:
  containers:
  - name: container01
    image: busybox:1.35
    volumeMounts:
    - name: udev
      mountPath: /data
  volumes:
  - name: udev
    azureFile:
      secretName: foosecret
      shareName: fooshare
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod14
spec:
  containers:
  - name: container01
    image: busybox:1.35
    volumeMounts:
    - name: udev
      mountPath: /data
  volumes:
  - name: udev
    vsphereVolume:
      volumePath: /foo/disk.vmdk
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod15
spec:
  containers:
  - name: container01
    image: busybox:1.35
    volumeMounts:
    - name: udev
      mountPath: /data
  volumes:
  - name: udev
    quobyte:
      registry: 10.80.90.100:1111
      volume: foovol
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod16
spec:
  containers:
  - name: container01
    image: busybox:1.35
    volumeMounts:
    - name: udev
      mountPath: /data
  volumes:
  - name: udev
    azureDisk:
      kind: Managed
      diskName: foodisk
      diskURI: /subscriptions/123456/resourceGroups/MC_myAKSCluster_myAKSCluster_eastus/providers/Microsoft.Compute/disks/myAKSDisk
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod17
spec:
  containers:
  - name: container01
    image: busybox:1.35
    volumeMounts:
    - name: udev
      mountPath: /data
  volumes:
  - name: udev
    portworxVolume:
      volumeID: myportvol
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod18
spec:
  containers:
  - name: container01
    image: busybox:1.35
    volumeMounts:
    - name: udev
      mountPath: /data
  volumes:
  - name: udev
    scaleIO:
      gateway: https://localhost:443/api
      system: scaleio
      volumeName: vol-0
      secretRef:
        name: sio-secret
      fsType: xfs
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod19
spec:
  containers:
  - name: container01
    image: busybox:1.35
    volumeMounts:
    - name: udev
      mountPath: /data
  volumes:
  - name: udev
    storageos:
      volumeName: foovol
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod20
spec:
  containers:
  - name: container01
    image: busybox:1.35
    volumeMounts:
    - name: udev
      mountPath: /data
  volumes:
  - name: udev
    photonPersistentDisk:
      pdID: fooid.corp
