pod-security/restricted/restrict-volume-types/e2e/enforce-policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-volume-types
spec:
  validationFailureAction: Enforce
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
