pod-security/restricted/restrict-volume-types/e2e/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-volume-types-policy
spec:
  steps:
  - name: test-restrict-volume-types
    try:
    - apply:
        file: ../restrict-volume-types.yaml
    - assert:
        file: policy-assert.yaml
    - script:
        content: |
          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../restrict-volume-types.yaml | kubectl apply -f - 
    - assert:
        file: enforce-policy-assert.yaml
    - apply:
        file: good-resource.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-resource.yaml
